# Ffmpeg_demo

./: .gitignore  README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/jbox2d/example/com/ffmpeg_demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ffmpeg_JasonPlayer.c  ffmpeg_play.c  ffmpeg_player.c  ffmpeg_playerToFile.c  ffmpeg_playerToSurface.c  ffmpeg_voicer.c  func_object.cpp  my_ffmpeg.cpp  native-lib.cpp  queue.c  queue.h  stl.cpp  stl_2.cpp
app/src/main/cpp/include/libavformat/: avformat.h
app/src/main/java/jbox2d/example/com/ffmpeg_demo/: MainActivity.java  VideoPlayActivity.java  VideoRenderActivity.java
app/src/main/java/jbox2d/example/com/ffmpeg_demo/utils/: AudioUtil.java  JasonPlayer.java  VideoUtils.java  VideoView.java
app/src/main/res/layout/: activity_main.xml  activity_video_play.xml  activity_video_render.xml
app/src/main/res/values/: strings.xml
app/src/test/java/jbox2d/example/com/ffmpeg_demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
resource/: biji(1).txt  biji(2).txt  biji.txt  build_android.sh  dn_player.c  ffmpeg_player.c  ndk错误定位.txt  openSL.txt  vim.txt  笔记.txt
resource/ffmpeg/: build_android.sh  cmake配置.txt  ffmpeg-android-build-armeabi-v7a.sh  ffmpeg命令.txt  ffmpeg编译-ndk环境配置.txt  ffmpeg编译.txt  ffprobe-ffplay-ffmpeg命令.txt  yuv编译.txt
resource/ffmpeg/media/: flv格式.txt  m3u8格式.txt  mp4格式.txt  ts格式.txt
resource/ffmpeg/ndktools/: native层内存泄漏检测.txt  ndk工具详解.txt
resource/makefile/: makefile_txt.txt
resource/mk/: Makefile
resource/nginx/: nginx+rtmp+openssh流媒体服务器搭建.txt  nginx-rtmp流媒体服务器搭建.txt  音视频同步.txt
resource/pthread/: 01.c  02.c  03.c
resource/shell/: linux_minl.txt  linux_shell_vim_xftp.txt  linux_xftp.txt  vim.txt
resource/shell2/: 01.sh  02.sh  03.sh  04.sh  05.sh  06.sh  07.sh  08.sh  09.sh  10.sh  11.sh  12.sh  13.sh  14.sh  15.sh  16.sh  17.sh  test2  test6  test7  test8  test9
resource/shell2/bak/: 01.sh  02.sh  03.sh  04.sh  05.sh  06.sh  07.sh  08.sh
